src/test/deca/context/invalid/champ_protege_cond_2.deca
// Description :
//    Test de la sélection d'un champ protégé dans une classe 
//
// Résultats:
//    Ligne 16 : 
//
// Historique:
//    créé le 22/01/2017

class A {
    protected int x;
}
class X {
    void m() {
      A a = new A();
      println(a.x) ; // Erreur contextuelle : x est protege
    }
}
